# PR-3602

./: .gitignore  Doxyfile  LICENSE  README.md  meson.build
benchmarks/: main.cpp  meson.build  tspsolver_benchmark.cpp
report/: .gitignore  main.tex  references.bib
report-md/: bibliography.bib  report.md  watch-for-graphs.sh
report-md/graphs/: modeling-the-problem_example1-psg.dot  modeling-the-problem_example2.dot
report/graphs/: modeling-the-problem_example1-map.dot  modeling-the-problem_example1-psg.dot  modeling-the-problem_example2.dot
src/: meson.build
src/heuristics/: heuristic.cpp  heuristic.hpp  mst.cpp  mst.hpp  null.cpp  null.hpp  shortest_path.cpp  shortest_path.hpp
src/mapgen/: mapgen.cpp  mapgen.hpp
src/psg/: psg.cpp  psg.hpp  psg.tcc
src/solver/: tspsolver.cpp  tspsolver.hpp  tspsolver.tcc
subprojects/: celero.wrap  graph.wrap
tests/: .clang  heuristics_test.cpp  mapgen_test.cpp  meson.build  psg_test.cpp  solver_test.cpp
tests/mapgen/: mapgen.cpp  mapgen.hpp
